trunk/Archive2/dc/78201687b93833/output
main.cpp:2:19: error: 'X' is not a type
 int fun(X x, X X, X y);
                   ^
