trunk/Archive2/dc/78201687b93833/main.cpp
typedef int X;
int fun(X x, X X, X y);

int main() {}